daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N26_bad_leak_value/h0.hex
2c3c623188816c32b5e802b995976d2ac213855b519823485fa07ecd4dd3ed6a0c14ca6aed8fb673727a80f4ad2ecd6b3b8b5ade5a196afb4876ef9eaa11b3b4
